2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test for sysconf().
	* psxsysconf/.cvsignore, psxsysconf/Makefile.am, psxsysconf/init.c,
	psxsysconf/psxsysconf.scn, psxsysconf/system.h: New files.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx01/init.c, psx01/psx01.scn: Add more test cases for
	sched_rr_get_interval() and sched_get_priority_max().

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxenosys/init.c: Fix typo.

2007-12-17	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Rename psxtimer to psxtimer01 to indicate
	addition of second POSIX Timer test. Add initial version of
	psxtimer02 to cover some conditions missed in psxtimer01. More cases
	left to add.
	* psxtimer01/.cvsignore, psxtimer01/Makefile.am, psxtimer01/psxtimer.c,
	psxtimer01/psxtimer01.scn, psxtimer01/system.h,
	psxtimer02/.cvsignore, psxtimer02/Makefile.am, psxtimer02/psxtimer.c,
	psxtimer02/psxtimer02.scn, psxtimer02/system.h: New files.
	* psxtimer/.cvsignore, psxtimer/Makefile.am, psxtimer/psxtimer.c,
	psxtimer/psxtimer.scn, psxtimer/system.h: Removed.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx01/init.c, psx01/psx01.scn: Add usleep() test.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: New test to cover all RTEMS POSIX
	functions that return ENOSYS.
	* psxenosys/.cvsignore, psxenosys/Makefile.am, psxenosys/init.c,
	psxenosys/psxenosys.scn, psxenosys/system.h: New files.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psx13/test.c: Fix spelling error.

2007-12-13	Joel Sherrill <joel.sherrill@OARcorp.com>

	* psxtime/test.c: Add tests for adjtime().

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* psxbarrier01/psxbarrier01.scn, psxbarrier01/test.c,
	psxrwlock01/psxrwlock01.scn, psxrwlock01/test.c: Added several test
	cases to improve test coverage.

2007-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1262/filesystem