@@ -6,7 +6,7 @@ ACLOCAL_AMFLAGS = -I ../aclocal
 
 SUBDIRS = psxhdrs psx01 psx02 psx03 psx04 psx05 psx06 psx07 psx08 psx09 \
     psx10 psx11 psx12 psxtime psxtimer01 psxtimer02  psxcancel psxbarrier01 \
-    psxmsgq01 psxrwlock01 psxsem01 psxspin01 psxenosys psxsysconf
+    psxmsgq01 psxrwlock01 psxsem01 psxspin01 psxenosys psxsignal01 psxsysconf
 
 ## File IO tests
 SUBDIRS += psxfile01 psxreaddir psxstat psxmount psx13 psxchroot01
